--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -72,7 +72,7 @@ Whether you need a full enterprise deployment or just want to explore what Open 
 [**Contact Enterprise Sales**](mailto:sales@openwebui.com)
 
 :::note Are you an Agency or Reseller?
-If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Program Guidelines](./partners)**.
+If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
 :::
 
 ---
