--- a/docs/enterprise/customers/index.mdx
+++ b/docs/enterprise/customers/index.mdx
@@ -1,14 +1,13 @@
 ---
 sidebar_position: 5
 title: "👥 Customer Stories"
-description: "Discover how leading organizations are using Open WebUI to accelerate innovation."
 ---
 
 # Customer Stories
 
 ## Powering Innovation at Scale
 
-Open WebUI is the interface of choice for engineering teams, researchers, and enterprises worldwide. With hundreds of thousands of active deployments, Open WebUI is silently powering internal AI initiatives across Fortune 500s, government agencies, and research institutions.
+Open WebUI is the interface of choice for engineering teams, researchers, and enterprises worldwide. With thousands of active deployments, and hundreds of thousands of active users, Open WebUI is quietly powering AI initiatives across Fortune 500s, government agencies, and research institutions.
 
 While many of our enterprise users operate in stealth or highly sensitive environments, we are proud to highlight those who are building in the open.
 
@@ -40,4 +39,5 @@ If your organization is using Open WebUI to solve complex problems, improve priv
 Are you ready to be featured? Contact our editorial team to discuss a potential case study or community spotlight.
 
 [**📩 Contact Our Team**](mailto:sales@openwebui.com?subject=Customer%20Story%20Submission)
+
 :::
