--- a/docs/enterprise/customers/index.mdx
+++ b/docs/enterprise/customers/index.mdx
@@ -7,9 +7,11 @@ title: "👥 Customer Stories"
 
 ## Powering Innovation at Scale
 
-Open WebUI is the interface of choice for engineering teams, researchers, and enterprises worldwide. With thousands of active deployments, and hundreds of thousands of active users, Open WebUI is quietly powering AI initiatives across Fortune 500s, government agencies, and research institutions.
+Open WebUI is the interface of choice for individuals, engineering teams, researchers, and enterprises worldwide. With thousands of active deployments, it powers AI initiatives across startups, Fortune 500 companies, government agencies, and research institutions—helping people reclaim time for what truly matters.
 
-While many of our enterprise users operate in stealth or highly sensitive environments, we are proud to highlight those who are building in the open.
+Many of our users work in environments where privacy isn't optional—it's essential. That's by design. Open WebUI is built for those who need powerful AI capabilities with complete control over their data.
+
+As our community grows, so does this showcase. We're proud to highlight those who are building in the open.
 
 ---
 
@@ -17,27 +19,27 @@ While many of our enterprise users operate in stealth or highly sensitive enviro
 
 ### Samsung Semiconductor
 
-See how Samsung Semiconductor built a secure, self-hosted AI platform to boost R&D efficiency, reducing workflow times **from days to hours**.
+See how Samsung Semiconductor built a secure, self-hosted AI platform to boost R&D efficiency—reducing workflow times **from days to hours**.
 
 [![Samsung Semiconductor Case Study](/images/enterprise/customers/samsung-semiconductor/hero.png)](./samsung-semiconductor)
 
-**[📖 Read the full Case Study →](./samsung-semiconductor)**
+**[📖 Read the Full Case Study →](./samsung-semiconductor)**
 
 ---
 
-## Join the Enterprise Showcase
+## Share Your Story
 
-We are currently expanding our showcase of organizations driving real impact with Open WebUI.
+We're actively expanding this showcase with organizations and teams driving real impact with Open WebUI.
 
-If your organization is using Open WebUI to solve complex problems, improve privacy, or democratize AI access for your team, we would love to hear your story.
+Whether you're using Open WebUI to solve complex problems, strengthen data privacy, or democratize AI access for your team, we'd love to hear from you.
 
-**Why share your story?**
-*   **Industry Visibility:** Position your engineering team as leaders in the private AI space.
-*   **Community Impact:** Help others understand the value of open, private AI architecture.
+**Why participate?**
 
-:::info Share Your Deployment Story
-Are you ready to be featured? Contact our editorial team to discuss a potential case study or community spotlight.
+- **Visibility**: Position your team as a leader in the private AI space.
+- **Community Impact**: Help others see what's possible with open, self-hosted AI.
 
-[**📩 Contact Our Team**](mailto:sales@openwebui.com?subject=Customer%20Story%20Submission)
+:::info Interested in Being Featured?
+Reach out to discuss a potential case study or community spotlight.
 
+[**📩 Contact Us**](mailto:sales@openwebui.com?subject=Customer%20Story%20Submission)
 :::
