docs: address feedback on Support page, refine CTAs, update index

--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -15,6 +15,17 @@ Whether you're a startup scaling fast or a Fortune 500 managing global operation
 
 ---
 
+## Let's Talk
+
+Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we are here to help.
+
+[**Contact Enterprise Sales**](mailto:sales@openwebui.com)
+
+:::note Are you an Agency or Reseller?
+If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
+:::
+---
+
 ## Why Enterprises Choose Open WebUI
 
 ### 🚀 Faster Innovation, No Vendor Lock-In
@@ -59,31 +70,25 @@ Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/
 
 <Testimonals />
 
-Explore how other organizations are driving real impact with Open WebUI.
-
 [View all customer stories →](/enterprise/customers)
 
 ---
 
-## Ready to Get Started?
-
-Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we are here to help.
-
-[**Contact Enterprise Sales**](mailto:sales@openwebui.com)
-
-:::note Are you an Agency or Reseller?
-If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
-:::
-
----
-
-## Built for Open Access
+## Free to Use, Built to Scale
 
 :::info
 Open WebUI is **free to use** and our source code is publicly available. You can deploy it today without an enterprise agreement.
 
 We believe in democratizing access to AI. The Enterprise offerings above provide **governance, white labeling, liability protection, and dedicated support** for organizations that require them—but the core platform remains free and accessible to our community.
 :::
+
+---
+
+## Ready to Get Started?
+
+Ready to explore how Open WebUI can transform your organization's AI capabilities?
+
+[**Contact Enterprise Sales →**](mailto:sales@openwebui.com)
 
 ---
 
