docs: added sales email guidelines

--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -17,13 +17,18 @@ Whether you're a startup scaling fast or a Fortune 500 managing global operation
 
 ## Let's Talk
 
-Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we are here to help.
+Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help.
 
 [**Contact Enterprise Sales**](mailto:sales@openwebui.com)
+
+:::tip Use Your Work Email
+To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com) are often flagged by our system and may not receive a response.
+:::
 
 :::note Are you an Agency or Reseller?
 If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
 :::
+
 ---
 
 ## Why Enterprises Choose Open WebUI
@@ -86,7 +91,7 @@ We believe in democratizing access to AI. The Enterprise offerings above provide
 
 ## Ready to Get Started?
 
-Ready to explore how Open WebUI can transform your organization's AI capabilities?
+Ready to explore how Open WebUI can help you transform your organization?
 
 [**Contact Enterprise Sales →**](mailto:sales@openwebui.com)
 
