--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -27,9 +27,9 @@ Ensure secure communication by implementing HTTPS encryption in your deployment.
 
 ---
 
-## 📊 Monitoring
-Learn how to monitor your Open WebUI instance, including health checks, model connectivity, and response testing.
-[Monitoring Guide](/getting-started/advanced-topics/monitoring)
+## 🔑 API Keys & Monitoring
+Learn how to set up API keys for programmatic access, and monitor your Open WebUI instance with health checks and response testing.
+[API Keys & Monitoring Guide](/getting-started/advanced-topics/monitoring)
 
 ---
 
