folders / projects and missing env vars

--- a/docs/features/chat-features/index.mdx
+++ b/docs/features/chat-features/index.mdx
@@ -9,7 +9,7 @@ Open WebUI provides a comprehensive set of chat features designed to enhance you
 
 ## Core Chat Features
 
-- **[🗂️ Conversation Organization](./conversation-organization.md)**: Organize chats with folders and tags to keep your workspace tidy and structured.
+- **[📁 Folders & Projects](./conversation-organization.md)**: Transform folders into powerful project workspaces with custom system prompts and attached knowledge bases.
 
 - **[🔗 URL Parameters](./url-params.md)**: Configure chat sessions through URL parameters, enabling quick setup of models, tools, and other features.
 
