--- a/docs/tutorials/integrations/mcp-notion.mdx
+++ b/docs/tutorials/integrations/mcp-notion.mdx
@@ -166,8 +166,7 @@ Once MCPO is running and configured with Notion:
     "spec_type": "url",
     "spec": "",
     "path": "openapi.json",
-    "auth_type": "bearer",
-    "key": "",
+    "auth_type": "none",
     "info": {
       "id": "notion-local",
       "name": "Notion (Local)",
