--- a/docs/features/mcp.mdx
+++ b/docs/features/mcp.mdx
@@ -66,7 +66,7 @@ This field restricts which tools are exposed to the LLM.
 *   **Default**: Leave empty to expose all tools (in most cases).
 *   **Workaround**: If you encounter connection errors with an empty list, try adding a single comma (`,`) to this field. This forces the system to treat it as a valid (but empty) filter, potentially bypassing some parsing issues.
 
-## 🔧 Troubleshooting
+## Troubleshooting
 
 ### "Failed to connect to MCP server"
 
